src/test/deca/context/valid/provided/ContextSansObjet/Unitaire/ConvFloat_FloatInt.deca
//Description :
//	Vérification contextuelle de convFloat d'une variable float affectée à un int
//
//Résultats :
//  ok

{
    float x = 3;
}