src/test/deca/context/invalid/ContextSansObjet/Identification/IdentificationBoolAssignInt.deca
//Description :
//	affectation d'un int à une variable définie comme boolean
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : type incompatible <10, 6>

{
	boolean x = 1;
}